<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/common_margin_min"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tanque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_padding_min"
        >
        <!-- Imagen de portada del libro -->
        <ImageView
            android:id="@+id/ivBookImg"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:contentDescription="@string/imagen_tank"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            />
        <!-- Guía para alinear los textos -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="81dp" />
        <!-- Nombre del tank -->
        <TextView
            android:id="@+id/tvBookTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre_tank"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/common_margin_min"
            android:layout_marginEnd="@dimen/common_margin_min"
            />
        <!-- Modelo del tank -->
        <TextView
            android:id="@+id/tvBookAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/model_tank"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/tvBookTitle"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_marginStart="@dimen/common_margin_min"
            android:layout_marginEnd="@dimen/common_margin_min"
            />
        <!-- Peso del tank -->
        <TextView
            android:id="@+id/tvBookDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/peso_tank"
            android:textSize="12sp"
            android:textColor="@android:color/black"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/tvBookAuthor"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_marginStart="@dimen/common_margin_min"
            android:layout_marginEnd="@dimen/common_margin_min"
            />
        <!-- OriginCountry del tank -->
        <TextView
            android:id="@+id/tvBookPages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/originCountry_tank"
            android:textSize="12sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/tvBookDescription"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_marginStart="@dimen/common_margin_min"
            android:layout_marginEnd="@dimen/common_margin_min"
            />
        <!-- Manufacturer del tank -->
        <TextView
            android:id="@+id/tvBookPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/manufacturer_tank"
            android:textSize="14sp"
            android:textColor="@android:color/holo_green_dark"
            app:layout_constraintTop_toBottomOf="@id/tvBookPages"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_marginStart="@dimen/common_margin_min"
            android:layout_marginEnd="@dimen/common_margin_min"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTank"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/common_padding_default"
        tools:listitem="@layout/item_zone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tanque"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.cardview.widget.CardView>


