<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainModule.DetailTankActivity">

    <!-- CardView con el contenido -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin_min"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding_min">

            <!-- Imagen de portada del tanque -->
            <ImageView
                android:id="@+id/ivTankImg"
                android:layout_width="80dp"
                android:layout_height="120dp"
                android:contentDescription="@string/imagen_tank"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                />

            <!-- Guía para alinear los textos -->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="100dp" />

            <!-- Modelo del tank -->
            <TextView
                android:id="@+id/tvTankModel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/model_tank"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/common_margin_min"
                android:layout_marginEnd="@dimen/common_margin_min" />

            <!-- Peso del tank -->
            <TextView
                android:id="@+id/tvTankPeso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/peso_tank"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintTop_toBottomOf="@id/tvTankModel"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginStart="@dimen/common_margin_min"
                android:layout_marginEnd="@dimen/common_margin_min" />

            <!-- OriginCountry del tank -->
            <TextView
                android:id="@+id/tvTankOrigin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/originCountry_tank"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@id/tvTankPeso"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginStart="@dimen/common_margin_min"
                android:layout_marginEnd="@dimen/common_margin_min" />

            <!-- Manufacturer del tank -->
            <TextView
                android:id="@+id/tvTankManufacturer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/manufacturer_tank"
                android:textSize="16sp"
                android:textColor="@android:color/holo_green_dark"
                app:layout_constraintTop_toBottomOf="@id/tvTankOrigin"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginStart="@dimen/common_margin_min"
                android:layout_marginEnd="@dimen/common_margin_min" />

            <!-- Mira para favoritos -->
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/ivFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_margin_min"
                android:backgroundTint="@color/black"
                android:button="@drawable/ic_look"
                app:buttonTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- RecyclerView debajo del CardView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewZone"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/common_padding_default"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_zone" />

    <!-- FloatingActionButton en la esquina inferior derecha -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/description_back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
